--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,8 @@
-<div>
-  <h1 class="font-bold text-4xl">Home#index</h1>
-  <p>Find me in app/views/home/index.html.erb</p>
+<h1 class="text-2xl mb-4">Hello</h1>
+<div class="border bg-white p-5">
+
+  <p class="text-2xl mb-4"> <span class="text-sm">$ </span>525,000</p>
+  <p class="text-sm">Total Wealth</p>
 </div>
+
+
