feat: add home dashboard layout

--- a/app/views/shared/_dash-sidebar.html.erb
+++ b/app/views/shared/_dash-sidebar.html.erb
@@ -8,7 +8,7 @@
           </li>
 
            <li>
-            <%= link_to 'Wealth', wealth_index_path, class: "text-base text-gray-900 font-normal rounded-lg flex items-center p-2 hover:bg-gray-100 group" %>
+            <%= link_to 'Wealth', admin_wealth_index_path, class: "text-base text-gray-900 font-normal rounded-lg flex items-center p-2 hover:bg-gray-100 group" %>
           </li>
         </ul>
       </div>
