--- a/app/views/shared/_dash-navbar.html.erb
+++ b/app/views/shared/_dash-navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="bg-white border-b border-gray-200 fixed z-30 py-2 w-full">
+<nav class="bg-white border-b border-gray-200 fixed z-30 py-2 w-full shadow-sm">
   <div class="px-3 py-3 lg:px-5 lg:pl-3">
     <div class="flex items-center justify-between">
       <div class="flex items-center justify-start">
