feat: change app font to sans-serif

--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -2,7 +2,7 @@
 <html>
   <%= render partial: 'shared/head' %>
   <body>
-    <main class="font-serif h-screen w-screen">
+    <main class="h-screen w-screen">
       <%= render 'shared/dash-navbar' %>
       <%= render 'shared/dash-sidebar' %>
 
