--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <main class="font-serif h-screen w-screen">
+    <main class="h-screen w-screen">
       <%= yield %>
     </main>
   </body>
