--- a/app/views/admin/assets/_asset.html.erb
+++ b/app/views/admin/assets/_asset.html.erb
@@ -3,24 +3,19 @@
     <strong class="block font-medium mb-1">Name:</strong>
     <%= asset.name %>
   </p>
-
   <p class="my-5">
     <strong class="block font-medium mb-1">Owner:</strong>
     <%= asset.owner %>
   </p>
-
   <p class="my-5">
     <strong class="block font-medium mb-1">Category:</strong>
     <%= asset.category %>
   </p>
-
   <p class="my-5">
     <strong class="block font-medium mb-1">Starting balance:</strong>
-    <%= asset.starting_balance %>
+    <%= asset.asset_values.last.amount %>
   </p>
-
   <% if action_name != "show" %>
-    <%= link_to "Show this asset", asset, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
     <%= link_to 'Edit this asset', edit_admin_asset_path(asset), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
     <hr class="mt-6">
   <% end %>
