--- a/app/views/shared/_dash-sidebar.html.erb
+++ b/app/views/shared/_dash-sidebar.html.erb
@@ -4,11 +4,17 @@
       <div class="flex-1 px-3 bg-white divide-y space-y-1">
         <ul class="space-y-2 pb-2">
           <li>
-           <%= link_to 'Dashboard', root_path, class: "text-base text-gray-900 font-normal rounded-lg flex items-center p-2 hover:bg-gray-100 group" %>
+            <%= link_to 'Dashboard', root_path,
+                class: "text-base text-gray-900 font-normal
+                rounded-lg flex items-center p-2 hover:bg-gray-100 group" %>
           </li>
+          <% active_selection = request.path == admin_wealth_index_path ? "bg-gray-100" : "" %>
+          <li>
+            <%= link_to 'Wealth', admin_wealth_index_path,
+                  class: "text-base text-gray-900 font-normal
+                  rounded-lg flex items-center p-2 hover:bg-gray-100 #{active_selection} group
 
-           <li>
-            <%= link_to 'Wealth', admin_wealth_index_path, class: "text-base text-gray-900 font-normal rounded-lg flex items-center p-2 hover:bg-gray-100 group" %>
+          " %>
           </li>
         </ul>
       </div>
